--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
                 <!-- Team Member 1 - Mohamed -->
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="images/mohamed-khaled.jpg" alt="Mohamed Khaled - Frontend Developer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="./images/Mohamed.jpg" alt="Mohamed Khaled - Frontend Developer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h3 class="team-name">Mohamed Khaled</h3>
                     <p class="team-role">192300448</p>
@@ -56,6 +56,42 @@
                         <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">Laravel</span>
                         <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px;">React</span>
                     </div>
+                </div>
+
+                <div class="team-member">
+                    <div class="team-photo">
+                        <img src="images/mohamed-khaled.jpg" alt="Mohamed Khaled - Frontend Developer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                    </div>
+                    <h3 class="team-name">Mohamed Osama </h3>
+                    <p class="team-role"> 192300043</p>
+                    <p style="color: #666; margin-top: 15px; font-size: 14px; line-height: 1.6;">
+                        Mohamed specializes in creating beautiful and responsive user interfaces. 
+                        He's passionate about modern web technologies and user experience design.
+                    </p>
+                    <!-- <div style="margin-top: 20px;">
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">HTML/CSS</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">JavaScript</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">Laravel</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px;">React</span>
+                    </div> -->
+                </div>
+
+                <div class="team-member">
+                    <div class="team-photo">
+                        <img src="images/mohamed-khaled.jpg" alt="Mohamed Khaled - Frontend Developer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                    </div>
+                    <h3 class="team-name">Mohamed Khaled</h3>
+                    <p class="team-role">192300448</p>
+                    <p style="color: #666; margin-top: 15px; font-size: 14px; line-height: 1.6;">
+                        Mohamed specializes in creating beautiful and responsive user interfaces. 
+                        He's passionate about modern web technologies and user experience design.
+                    </p>
+                    <!-- <div style="margin-top: 20px;">
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">HTML/CSS</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">JavaScript</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px; margin-right: 5px;">Laravel</span>
+                        <span style="background: #4a90e2; color: white; padding: 5px 10px; border-radius: 15px; font-size: 12px;">React</span>
+                    </div> -->
                 </div>
 
                 <!-- Team Member 2 - Ahmed -->
