--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
                     <div class="team-photo">
                         <img src="images/mohamed-khaled.jpg" alt="Mohamed Khaled - Frontend Developer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
-                    <h3 class="team-name">Ead Ahmed</h3>
+                    <h3 class="team-name">Eyad Ahmed</h3>
                     <p class="team-role">192300006</p>
                     <p style="color: #666; margin-top: 15px; font-size: 14px; line-height: 1.6;">
                         Eyad is an enthusiastic contributor with a passion for technology and teamwork.
