Remove merge conflict markers <<<<<<< HEAD across repo

--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -100,7 +100,6 @@
                     </button> -->
                     <button class="btn" onclick="showAllProducts()">
                         <span>👁️</span> Show All
-<<<<<<< HEAD
                     </button>
                     <a href="compare.html" class="btn btn-secondary">
                         <span>⚖️</span> Compare Products
@@ -256,3 +255,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
