--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -124,7 +124,6 @@
                     </div> -->
                 </div>
 
-<<<<<<< HEAD
 
                             <!-- Team Member 3 - Abdullah -->
                 <div class="team-member">
@@ -172,7 +171,6 @@
                     <p style="color: #666; margin-top: 15px; font-size: 14px; line-height: 1.6;">
                         Nour coordinates the team and ensures all projects are delivered on time. 
                         He keeps everyone organized and focused on our goals.
-<<<<<<< HEAD
 
 
 =======
@@ -268,3 +266,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
