--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - AMNA Shop</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header with navigation -->
@@ -30,13 +31,14 @@
         </div>
     </header>
 
-    <!-- About section -->
+        <!-- About section -->
+    <main id="main-content">
     <section class="section">
         <div class="container">
             <h1 class="section-title">About AMNA Shop</h1>
             
-            <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                <p style="font-size: 18px; color: #666; margin-bottom: 40px; line-height: 1.8;">
+            <div class="lead-wrapper">
+                <p class="lead muted-text">
                     AMNA Shop is a modern e-commerce platform created as a university project by four dedicated 
                     computer science students. Our team combines passion for technology with a commitment to 
                     delivering exceptional online shopping experiences.
@@ -53,7 +55,7 @@
 
                 <div class="about-content-card">
                     <h2>Our Values</h2>
-                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; text-align: left;">
+                    <div class="values-grid" style="text-align: left;">
                         <div>
                             <h3>Innovation</h3>
                             <p>We embrace new technologies and creative solutions.</p>
@@ -86,6 +88,8 @@
             </div>
         </div>
     </section>
+
+    </main>
 
     <!-- Team preview section -->
     <!-- <section class="section" style="background-color: #f8f9fa;">
