--- a/returns.html
+++ b/returns.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Returns Policy - AMNA Shop</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         .returns-overview {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
