--- a/wishlist.html
+++ b/wishlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Wishlist - AMNA Shop</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/themes/china.css">
     <style>
         .wishlist-container {
             max-width: 1200px;
