--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta property="og:url" content="https://example.com/">
     <meta property="og:image" content="images/og-image.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Design system: variables, utilities, components (flat colors, spacing, typography) -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/design-system.css">
     <!-- Use a neutral, readable font for a modern, minimal look -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -104,7 +106,7 @@
         <div class="container">
             <h2 class="section-title">What our customers say</h2>
             <div class="testimonials-grid">
-                <div class="testimonial reveal" tabindex="0">
+                <div class="testimonial card reveal" tabindex="0">
                     <div class="testimonial-header">
                         <img loading="lazy" src="https://i.pravatar.cc/80?img=12" alt="Samar avatar" class="avatar">
                         <div>
@@ -114,7 +116,7 @@
                     </div>
                     <div class="quote">"Fast delivery and amazing support. I will shop again!"</div>
                 </div>
-                <div class="testimonial reveal" tabindex="0">
+                <div class="testimonial card reveal" tabindex="0">
                     <div class="testimonial-header">
                         <img loading="lazy" src="https://i.pravatar.cc/80?img=22" alt="Karim avatar" class="avatar">
                         <div>
@@ -124,7 +126,7 @@
                     </div>
                     <div class="quote">"Great quality and the product matches the description perfectly."</div>
                 </div>
-                <div class="testimonial reveal" tabindex="0">
+                <div class="testimonial card reveal" tabindex="0">
                     <div class="testimonial-header">
                         <img loading="lazy" src="https://i.pravatar.cc/80?img=14" alt="Nada avatar" class="avatar">
                         <div>
