--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>login </title>
-    <link rel="stylesheet" href="css/style.css" />
+    
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="login-page">
